--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div id="storymap" class="container-fluid">
     <div class="row">
         <div class="col-sm-6 col-md-4 storymap-story">
-            <section data-scene="overview" data-background="img/portland.mp4">
+            <section data-scene="overview" data-background="assets/portland.mp4">
                 <div class="fullscreen text-center">
 
                     <h1 class="display-4 d-flex justify-content-center">Cities in Oregon</h1>
@@ -263,7 +263,7 @@
     var layers = {
         ESRI: {layer: L.tileLayer('http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}')},
         counties: {
-            layer: L.geoJson.ajax('assets/counties.txt', {
+            layer: L.geoJson.ajax('assets/counties.geojson', {
                 color: 'orange',
                 weight: 2,
                 opacity: 0.3
