--- a/index.html
+++ b/index.html
@@ -119,20 +119,15 @@
             </section>
             <section data-scene="xmas">
                 <h2>Christmas Lake Valley</h2>
-                <!-- <p>Bend is a city in, and the county seat of Deschutes County, Oregon, United States. It is the
-                    principal city of the Bend, Oregon Metropolitan Statistical Area. Bend is Central Oregon's largest
-                    city, and despite its modest size, is the de facto metropolis of the region, owing to the low
-                    population density of that area. Bend recorded a population of 76,693 at the time of the 2010 U.S.
-                    Census, up from 52,029 at the 2000 census. The estimated population of the city as of 2013 is
-                    81,236. Bend's metro population was estimated at 165,954 as of July 1, 2013. The Bend MSA is the
-                    fifth largest metropolitan area in Oregon.</p>
-                <p>Bend is located on the eastern edge of the Cascade Range along the Deschutes River. Here the
-                    Ponderosa Pine forest transitions into the high desert, characterized by arid land, junipers,
-                    sagebrush, and bitter-brush. Originally a crossing point on the river, settlement began in the early
-                    1900s. Bend was incorporated as a city in 1905. Economically, it started as a logging town but is
-                    now identified as a gateway for many outdoor sports, including mountain biking, fishing, hiking,
-                    camping, rock climbing, white-water rafting, skiing, paragliding and golf. In 2015, Men's Journal
-                    ranked Bend as one of The 10 Best Places to Live Now.</p> -->
+                <p>The Fort Rock-Christmas Lake Valley Basin is the basin of a former inland sea that existed in that region from Pliocene through late Pleistocene time.
+                  The Fort Rock basin maar field includes over 30 hydrovolcanic landforms spread over an area of 1,500 square miles (4,000 km2).
+                  During the Pleistocene and early Holocene, Paleolake Fort Rock encompassed the entire basin.</p>
+                <p>The Fort Rock Basin is a endorheic basin. Increased moisture in this semiarid environment during the Pleistocene through increased cloud cover and cooler temperatures resulted in higher lake levels.
+                  At its maximum, the lake filled the basin up to 75 m deep (245ft), with a surface area of over 2,300 km2 (900 mi2).
+                  While this is larger than any modern lakes in Oregon, Paleolake Fort Rock was smaller than any of the other paleolakes to the south.</p>
+                  <p>Christmas Valley is an unincorporated community in Lake County, Oregon, United States.
+                    The community was named after nearby Christmas Lake, usually dry, east of the present townsite and the site of the former Lake post office, which ran from 1906 until 1943. 
+                    Real estate development around a planned community by M. Penn Phillips, called Christmas Valley, started after World War II. The Christmas Valley post office was established in 1963 as a rural station of Silver Lake </p>
             </section>
 
             <section data-scene="oregon">
@@ -209,7 +204,7 @@
                     <p>The favicon image was acquired from <a>http://www.udlcenter.org/advocacy/state/oregon.</a></p>
                     <p>This story map uses geospatial data from mapbox, Google Earth Engine, ESRI Map, Open Street Maps
                         and Oregon Explorer.</p>
-                    <p>Data for this story map came from the US Dept. of the Interior, The BLM, rivers.gov,  </p>
+                    <p>Data for this story map came from the US Dept. of the Interior, U.S. Fish & Wildlife Service, National Wilflife Refuge System, The BLM, rivers.gov,  </p>
                 </div>
             </div>
         </div>
