--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   At its maximum, the lake filled the basin up to 75 m deep (245ft), with a surface area of over 2,300 km2 (900 mi2).
                   While this is larger than any modern lakes in Oregon, Paleolake Fort Rock was smaller than any of the other paleolakes to the south.</p>
                   <p>Christmas Valley is an unincorporated community in Lake County, Oregon, United States.
-                    The community was named after nearby Christmas Lake, usually dry, east of the present townsite and the site of the former Lake post office, which ran from 1906 until 1943. 
+                    The community was named after nearby Christmas Lake, usually dry, east of the present townsite and the site of the former Lake post office, which ran from 1906 until 1943.
                     Real estate development around a planned community by M. Penn Phillips, called Christmas Valley, started after World War II. The Christmas Valley post office was established in 1963 as a rural station of Silver Lake </p>
             </section>
 
@@ -259,7 +259,7 @@
         malheur: {lat: 43.2621473, lng: -118.934955, zoom: 11, name: 'malhuer', layers: [layers.ESRI]},
         xmas: {lat: 43.284782, lng: -120.9032061, zoom: 11, name: 'xmas', layers: [layers.satellite]},
         oregon: {lat: 43.0000000, lng: -120.5000000, zoom: 8.5, name: 'Oregon State', layers: [layers.ESRI]},
-        end: {lat: 44.0000000, lng: -123.5000000, zoom: 7, name: 'The End'}
+        end: {lat: 44.0000000, lng: -123.5000000, zoom: 7, name: 'The End', layers: [layers.ESRI]},
     };
 
     $('#storymap').storymap({
