--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <!--add favicon for the web page-->
-    <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
@@ -53,10 +53,11 @@
 <div id="storymap" class="container-fluid">
     <div class="row">
         <div class="col-sm-6 col-md-4 storymap-story">
-            <section data-scene="overview" data-background="assets/portland.mp4">
+            <section data-scene="overview" data-background="img/alvord.jpg">
+
                 <div class="fullscreen text-center">
 
-                    <h1 class="display-4 d-flex justify-content-center">Geographic feautes of Southeastern Oregon</h1>
+                    <h1 class="display-4 d-flex justify-content-center">Geographic Feautes of Southeastern Oregon</h1>
 
 
                     <small class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)">This story map
@@ -67,29 +68,30 @@
             </section>
             <section data-scene="hart">
                 <h2>Hart Mountain</h2>
-                <p>Hart Mountain National Antelope Refuge is located in southcentral Oregon on a massive fault block ridge that ascends abruptly nearly three-quarters of
-                   a mile above the Warner Valley floor in a series of rugged cliffs, steep slopes, and knife-like ridges. </p>
+                <p>
+                  <font face="verdana">Hart Mountain National Antelope Refuge is located in southcentral Oregon on a massive fault block ridge that ascends abruptly nearly three-quarters of
+                   a mile above the Warner Valley floor in a series of rugged cliffs, steep slopes, and knife-like ridges. Warner Peak is the highest point in the refuge.</p>
                 <p>The rugged diversity of the terrain creates a rich mix of habitat types, home to more than 300 species of wildlife.
                   Featured species include pronghorn antelope, California bighorn sheep, mule deer, greater sage-grouse, and redband trout.
                   The 278,000-acre refuge is one of the most expansive wildlife habitats in the arid West free of domestic livestock</p>
                 <p>Since its creation in 1936 as a range for remnant herds of pronghorn antelope,
                   management of the refuge has broadened to include conservation of all wildlife species characteristic of this high desert
-                   habitat and restoration of native ecosystems for the public's enjoyment, education, and appreciation. </p>
+                   habitat and restoration of native ecosystems for the public's enjoyment, education, and appreciation. </font></p>
             </section>
 
             <section data-scene="steens">
                 <h2>Steens Mountain</h2>
-                <p>The Steens Mountain Cooperative Management and Protection Area (CMPA) consists of 428,156 acres of public land
+                <p><font face="verdana">The Steens Mountain Cooperative Management and Protection Area (CMPA) consists of 428,156 acres of public land
                    offering diverse scenic and recreational experiences. The 52-mile Steens Mountain Backcountry Byway provides access to four campgrounds
                    and the views from Kiger Gorge, East Rim, Big Indian Gorge, Wildhorse and Little Blitzen Gorge overlooks are not to be missed!</p>
                 <p>The United States Congress designated the Steens Mountain Wilderness in 2000 and it now has over 170,200 acres. All of this wilderness is located in Oregon and is managed by the Bureau of Land Management.
                   Steens Mountain is located in Oregon's high desert is one of the crown jewels of the state's wildlands. It is some of the wildest and most remote land left in Oregon.</p>
-                <p>Popular activities include camping, picnicking, sightseeing, and exploring the open country on foot and horseback. Hiking is available in all areas and trailheads exist near Page Springs and South Steens Campgrounds, as well as Wildhorse Overlook and Pike Creek. Visitors photograph landscapes, wildlife and wildflowers, and catch redband trout in the Donner und Blitzen River. Others enjoy hunting for wild game and visiting special places, cross-country skiing, and snowshoeing.</p>
+                <p>Popular activities include camping, picnicking, sightseeing, and exploring the open country on foot and horseback. Hiking is available in all areas and trailheads exist near Page Springs and South Steens Campgrounds, as well as Wildhorse Overlook and Pike Creek. Visitors photograph landscapes, wildlife and wildflowers, and catch redband trout in the Donner und Blitzen River. Others enjoy hunting for wild game and visiting special places, cross-country skiing, and snowshoeing. </font></p>
             </section>
 
             <section data-scene="owyhee">
                 <h2>Owyhee River</h2>
-                <p>The headwaters of the Owyhee River are found in Elko County in northeastern Nevada. The Owyhee flows north along the east side of the Independence Mountains before it proceeds through southwestern Idaho where
+                <p><font face="verdana">The headwaters of the Owyhee River are found in Elko County in northeastern Nevada. The Owyhee flows north along the east side of the Independence Mountains before it proceeds through southwestern Idaho where
                    it is joined by the South Fork of the Owyhee River before reaching the Oregon border. In 1984, Congress designated 120 miles (193 km) of the Owyhee, beginning at the Idaho-Oregon border downstream to the Owyhee Reservoir
                    (excluding two short segments). The entire segment is classified as ‘wild.’</p>
                 <p>Approximately 100 prehistoric campsites have been recorded on the lower segment of the Owyhee River between the Rome Launch Site and Burnt Creek Ranch.
@@ -101,12 +103,12 @@
                   The Owyhee River Canyon provides diverse habitat for over 200 species of wildlife. Birds are especially abundant, both in number of species and number of individuals.
                   Riparian vegetation attracts unique populations of songbirds, and upland game birds include large populations of chukar partridge, California quail and Hungarian partridge.
                   California bighorn sheep are present, as are mule deer, pronghorn antelopes, cougars, bobcats and a variety of smaller mammals such as coyotes, badgers, otters, muskrats, marmots, raccoons, porcupines, and jack and cotton-tail rabbits.
-                </p>
+                </font></p>
             </section>
 
             <section data-scene="malheur">
                 <h2>Malhuer Lake</h2>
-                <p>In the late 1880s, plume hunters decimated North American bird populations in pursuit of breeding feathers for the hat industry. Hunters targeted large flocks of colonial nesting birds and shorebirds,
+                <p><font face="verdana">In the late 1880s, plume hunters decimated North American bird populations in pursuit of breeding feathers for the hat industry. Hunters targeted large flocks of colonial nesting birds and shorebirds,
                   killing birds indiscriminately and orphaning chicks. Eventually, the large numbers of colonial nesting birds on Malheur Lake were discovered by plume hunters.
                   In 1908, wildlife photographers William L. Finley and Herman T. Bohlman discovered that most of the white herons (egrets) on Malheur Lake had been killed in 1898 by plume hunters. After 10 years, the white heron population
                    still had not recovered. With backing from the Oregon Audubon Society, Finley and Bohlman proposed establishment of a bird reservation to protect birds, using Malheur, Mud and Harney lakes.</p>
@@ -115,41 +117,36 @@
                 Located in the Northern Great Basin, this portion of the State is lightly populated, generally arid with cold winters, and characterized by wide open spaces.</p>
                 <p>The refuge constitutes a small percentage of the Northern Great Basin’s total acreage but is a tremendously important source of wildlife habitat relative to other portions of the Northern Great Basin.
                   The refuge represents a crucial stop along the Pacific Flyway and offers resting, breeding and nesting habitat for hundreds of migratory birds and other wildlife.
-                   Many of the species migrating through or breeding here are highlighted as priority species in national bird conservation plans.</p>
+                   Many of the species migrating through or breeding here are highlighted as priority species in national bird conservation plans.</font></p>
             </section>
             <section data-scene="xmas">
                 <h2>Christmas Lake Valley</h2>
-                <p>The Fort Rock-Christmas Lake Valley Basin is the basin of a former inland sea that existed in that region from Pliocene through late Pleistocene time.
+                <p><font face="verdana">The Fort Rock-Christmas Lake Valley Basin is the basin of a former inland sea that existed in that region from Pliocene through late Pleistocene time.
                   The Fort Rock basin maar field includes over 30 hydrovolcanic landforms spread over an area of 1,500 square miles (4,000 km2).
-                  During the Pleistocene and early Holocene, Paleolake Fort Rock encompassed the entire basin.</p>
+                  During the Pleistocene and early Holocene, Paleolake Fort Rock encompassed the entire basin. This area is home to the Great Sandy Desert.</p>
                 <p>The Fort Rock Basin is a endorheic basin. Increased moisture in this semiarid environment during the Pleistocene through increased cloud cover and cooler temperatures resulted in higher lake levels.
                   At its maximum, the lake filled the basin up to 75 m deep (245ft), with a surface area of over 2,300 km2 (900 mi2).
                   While this is larger than any modern lakes in Oregon, Paleolake Fort Rock was smaller than any of the other paleolakes to the south.</p>
                   <p>Christmas Valley is an unincorporated community in Lake County, Oregon, United States.
                     The community was named after nearby Christmas Lake, usually dry, east of the present townsite and the site of the former Lake post office, which ran from 1906 until 1943.
-                    Real estate development around a planned community by M. Penn Phillips, called Christmas Valley, started after World War II. The Christmas Valley post office was established in 1963 as a rural station of Silver Lake </p>
+                    Real estate development around a planned community by M. Penn Phillips, called Christmas Valley, started after World War II. The Christmas Valley post office was established in 1963 as a rural station of Silver Lake. </font></p>
             </section>
 
             <section data-scene="oregon">
-                <h2>Oregon</h2>
-                <!-- <p>Oregon was inhabited by many indigenous tribes before Western traders, explorers, and settlers
-                    arrived. An autonomous government was formed in the Oregon Country in 1843 before the Oregon
-                    Territory was created in 1848. Oregon became the 33rd state on February 14, 1859. Today, at 98,000
-                    square miles (255,000 km²), Oregon is the ninth largest and, with a population of 4 million, 27th
-                    most populous U.S. state. The capital of Oregon is Salem, the second most populous of its cities,
-                    with 164,549 residents. Portland is Oregon's most populous city, with 632,309 residents, and ranks
-                    as the 26th most populous city in the United States. Portland's metro population of 2,389,228 ranks
-                    the 23rd largest metro in the nation. The Willamette Valley in western Oregon is the state's most
-                    densely populated area, home to eight of the ten most populous cities.</p> -->
-                <img src="img/oregon_flag.png" class="img-responsive img-thumbnail" alt="responsive image"
-                     alt-text="the flag of oregon">
-                <!-- <p>Oregon's landscape is diverse, with a windswept Pacific coastline; a volcano-studded Cascade Range;
-                    abundant bodies of water in and west of the Cascades; dense evergreen, mixed, and deciduous forests
-                    at lower elevations; and a high desert sprawling across much of its east all the way to the Great
-                    Basin.</p> -->
+                <h2>Southeastern Oregon</h2>
+                  <p><font face="verdana">Oregon's southeast corner forms the northernmost section of the Great Basin Desert, which also covers west Utah, part of Idaho and most of Nevada. In Oregon the desert is crossed by narrow mountain
+                     ranges separated by sagebrush flats, dry lakes and salt basins, quite a contrast both to the thickly
+                     forested hills to the west (at the edge of the Cascade Range) and the rolling, partly agricultural landscape to the north, seen for example around the John Day Fossil Beds.</p>
+                     <p>
+                     The southeast is virtually uninhabited; the only significant towns are scattered around the edge of the desert, including Plush and Lakeview on the west side, and Burns and Hines to the north.
+                     Paved roads are equally uncommon. But besides the general appeal of the expansive, arid scenery, the desert harbors many smaller sites of interest, including hot springs, wetlands, lakes, historic sites,
+                     volcanic remains and river canyons. Most of the land is publicly owned, managed by the BLM, and so open for largely unregulated exploration.</font>
+                  </p>
+
+
             </section>
 
-            <section data-scene="end" data-background="../../assets/end.jpg">
+            <section data-scene="end" data-background="img/steens.jpg">
                 <div class="fullscreen text-center">
                     <h1 class="display-4 d-flex justify-content-center">Thanks for watching!!!</h1>
                     <small class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)">Your
@@ -173,7 +170,7 @@
         </dt>
         <dt>
             <!--facebook icon-->
-            <a class="fab fa-github btn" href="https://github.com/jakobzhao/storymap" style="top:40px"
+            <a class="fab fa-github btn" href="https://github.com/scottjschmidt24/storymap" style="top:40px"
                target="_blank"></a>
         </dt>
         <dt>
@@ -191,20 +188,19 @@
                     <h4 class="modal-title">About</h4>
                 </div>
                 <div class="modal-body">
-                    <p>This is a web map of major cities in Oregon. It is mainly made as a demo for a course GEOG 371:
-                        Web Mapping provided by Oregon State University. The story map library is derived from the
+                    <p>This is a web map of major geographic features in Southeast Oregon. This project was created for GEOG: 371 at Oregon Stae University. The story map library is derived from the
                         storymap plugin for leaflet at <a>http://atlefren.github.io/storymap/</a>, and its functionality
                         relies on both leaflet and Boostrap.</p>
-                    <p><b>storymap.js</b> | Released Date: 02/20/2017 | Version: 2.5 | MIT License </p>
+                    <p><b>storymap.js</b> | Released Date: 03/08/2019 | Version: 2.5 | MIT License </p>
                     <p><b>Author: Scott Schmidt</b> | College of Earth, Ocean, Atmospheric Science | Oregon State University
                     </p>
-                    <p>The context about Oregon cities was collected from Wikipedia.</p>
-                    <p>The <a href="https://www.youtube.com/watch?v=UJ_vQC9PNY4">background video</a> on the front page
-                        was clipped from Youtube. </p>
+                    <!-- <p>The context about Oregon cities was collected from Wikipedia.</p> -->
+                    <!-- <p>The <a href="https://www.youtube.com/watch?v=UJ_vQC9PNY4">background video</a> on the front page
+                        was clipped from Youtube. </p> -->
                     <p>The favicon image was acquired from <a>http://www.udlcenter.org/advocacy/state/oregon.</a></p>
-                    <p>This story map uses geospatial data from mapbox, Google Earth Engine, ESRI Map, Open Street Maps
+                    <p>This story map uses geospatial data from mapbox, Google Earth Engine, ESRI Map, Open Street Maps, Leaflet
                         and Oregon Explorer.</p>
-                    <p>Data for this story map came from the US Dept. of the Interior, U.S. Fish & Wildlife Service, National Wilflife Refuge System, The BLM, rivers.gov,  </p>
+                    <p>Data for this story map came from the US Dept. of the Interior, U.S. Fish & Wildlife Service, National Wilflife Refuge System, The BLM, rivers.gov, and americansouthwest.net  </p>
                 </div>
             </div>
         </div>
@@ -252,14 +248,14 @@
 
 
     var scenes = {
-        overview: {lat: 42.6381549, lng: -118.5969229, zoom: 7, name: 'Cover Page', layers: []},
-        hart: {lat: 42.5210097, lng: -120.0152137, zoom: 10, name: 'hart', layers: [layers.natgeo]},
+        overview: {lat: 42.6381549, lng: -118.5969229, zoom: 7, name: 'Cover Page', layers: [layers.ESRI]},
+        hart: {lat: 42.5210097, lng: -120.0152137, zoom: 10, name: 'hart', layers: [layers.delorme]},
         steens: {lat: 42.6381549, lng: -118.5969229, zoom: 10, name: 'steens', layers: [layers.natgeo]},
         owyhee: {lat: 42.467152, lng: -117.200077, zoom: 10, name: 'owyhee', layers: [layers.ESRI]},
-        malheur: {lat: 43.2621473, lng: -118.934955, zoom: 11, name: 'malhuer', layers: [layers.ESRI]},
+        malheur: {lat: 43.2621473, lng: -119.034955, zoom: 11, name: 'malhuer', layers: [layers.ESRI]},
         xmas: {lat: 43.284782, lng: -120.9032061, zoom: 11, name: 'xmas', layers: [layers.satellite]},
-        oregon: {lat: 43.0000000, lng: -120.5000000, zoom: 8.5, name: 'Oregon State', layers: [layers.ESRI]},
-        end: {lat: 44.0000000, lng: -123.5000000, zoom: 7, name: 'The End', layers: [layers.ESRI]},
+        oregon: {lat: 43.0000000, lng: -120.5000000, zoom: 8.5, name: 'oregon', layers: [layers.natgeo]},
+        end: {lat: 44.0000000, lng: -123.5000000, zoom: 7, name: 'The End'},
     };
 
     $('#storymap').storymap({
