--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Cities in Oregon</title>
+    <title>SE Oregon</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--meta data for sharing links on Facebook-->
-    <meta property="og:title" content="The major cities in Oregon"/>
-    <meta property="og:url" content="http://geoviz.ceoas.oregonstate.edu/storymap/examples/2.5/video.html"/>
+    <meta property="og:title" content="Features of SE Oregon"/>
+    <meta property="og:url" content="https://www.facebook.com/sharer/sharer.php?u=https://scottjschmidt24.github.io/storymap/"/>
     <meta property="og:description" content="This is an example of a storymap."/>
     <meta property="og:image" content="../../img/social.png"/>
 
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-
 
     <!--add favicon for the web page-->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -165,7 +164,7 @@
         <dt>
             <!--facebook icon-->
             <a class="fab fa-facebook-square btn"
-               href="https://facebook.com/sharer.php?u=http://geoviz.ceoas.oregonstate.edu/storymap/examples/2.5/video.html"
+               href="https://www.facebook.com/sharer/sharer.php?u=https://scottjschmidt24.github.io/storymap/"
                target="_blank"></a>
         </dt>
         <dt>
@@ -197,7 +196,7 @@
                     <!-- <p>The context about Oregon cities was collected from Wikipedia.</p> -->
                     <!-- <p>The <a href="https://www.youtube.com/watch?v=UJ_vQC9PNY4">background video</a> on the front page
                         was clipped from Youtube. </p> -->
-                    <p>The favicon image was acquired from <a>http://www.udlcenter.org/advocacy/state/oregon.</a></p>
+                    <p>The favicon image was acquired from <a>https://www.favicon-generator.org/search/---/Tree.</a></p>
                     <p>This story map uses geospatial data from mapbox, Google Earth Engine, ESRI Map, Open Street Maps, Leaflet
                         and Oregon Explorer.</p>
                     <p>Data for this story map came from the US Dept. of the Interior, U.S. Fish & Wildlife Service, National Wilflife Refuge System, The BLM, rivers.gov, and americansouthwest.net  </p>
