--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
             <section data-scene="end" data-background="img/steens.jpg">
                 <div class="fullscreen text-center">
                     <h1 class="display-4 d-flex justify-content-center">Thanks for watching!!!</h1>
-                    <small class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)">Your
-                        Acknowledgement goes here
+                    <small class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)">
                     </small>
                 </div>
             </section>
