--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="fullscreen text-center">
 
-                    <h1 class="display-4 d-flex justify-content-center">Geographic Feautes of Southeastern Oregon</h1>
+                    <h1 class="display-4 d-flex justify-content-center">Geographic Features of Southeastern Oregon</h1>
 
 
                     <small class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)">This story map
